...
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <TextView
                    android:id="@+id/pickup_address"
                    style="@style/RATextView.MontserratLight"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/autocomplete_height"
                    android:layout_centerHorizontal="true"
                    android:background="@android:color/white"
                    android:clickable="true"
...
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/rate_driver_divider_height"
                    android:layout_below="@+id/pickup_address"
                    android:background="@color/divider" />

                <TextView
                    android:id="@+id/destination_address"
                    style="@style/RATextView.MontserratLight"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/autocomplete_height"
                    android:layout_below="@id/address_divider"
                    android:layout_centerHorizontal="true"
                    android:background="@android:color/white"
...
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/rate_driver_divider_height"
                        android:layout_below="@+id/destination_address"
                        android:background="@color/divider" />

                    <EditText
                        android:id="@+id/comment"
                        style="@style/RATextView.MontserratLight"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/autocomplete_height"
                        android:layout_below="@id/comments_divider"
                        android:layout_centerHorizontal="true"
                        android:background="@android:color/white"
                        android:clickable="true"
                        android:drawablePadding="@dimen/material_padding"
                        android:gravity="left|center_vertical"
                        android:hint="@string/comment_hint"
                        android:imeOptions="actionDone"
                        android:maxLength="200"
                        android:maxLines="1"
                        android:paddingBottom="4dp"
                        android:paddingLeft="@dimen/material_padding"
                        android:paddingRight="@dimen/material_padding"
...
                android:layout_height="45dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/icn_pickup_pin" />

            <LinearLayout
                android:id="@+id/pickup_location"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/pickup_location_height"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/bg_tooltip"
                android:gravity="center"
...
                        app:ringColor="#FFFFFF"
                        app:ringThickness="1dp" />

                </FrameLayout>

                <TextView
                    android:id="@+id/set_pickup_location"
                    style="@style/RATextView.MontserratLight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="4"
...
            style="@style/LinearLayout.Vertical"
            android:layout_alignParentBottom="true"
            android:animateLayoutChanges="true"
            android:alpha="@{mapModel.controlsAlpha}" />

        <ImageView
            android:id="@+id/cancel_pending_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/material_padding"
            android:src="@drawable/icn_cancel"
...
